Completed the task using Collab environment

--- a/Task_1_Iris_Classification.ipynb
+++ b/Task_1_Iris_Classification.ipynb
@@ -8,7 +8,7 @@
         "SsbbsyGseQ3I",
         "sPT5t1zA0_X3"
       ],
-      "authorship_tag": "ABX9TyP4GbP2XaE/72dl++OxODoN",
+      "authorship_tag": "ABX9TyMBMtUH7c0YXOg0jW3PFCfv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,20 +65,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZLf8xJQrB3wY",
-        "outputId": "be5b7a46-7973-4957-840f-37e9ae91e299"
+        "outputId": "a15dac51-9100-4e2a-d764-a62c7b35dafe"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "fatal: destination path 'datascience_nexus' already exists and is not an empty directory.\n"
+            "Cloning into 'datascience_nexus'...\n",
+            "remote: Enumerating objects: 28, done.\u001b[K\n",
+            "remote: Counting objects: 100% (28/28), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (25/25), done.\u001b[K\n",
+            "remote: Total 28 (delta 8), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (28/28), 190.70 KiB | 4.33 MiB/s, done.\n",
+            "Resolving deltas: 100% (8/8), done.\n"
           ]
         }
       ],
@@ -97,16 +103,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ODdzEyUZB_G6",
-        "outputId": "2ee07a18-b91a-4a3b-f9ff-e8490e2541bc"
+        "outputId": "ca6386ab-8100-4dd1-f837-addea96e730a"
       },
-      "execution_count": 92,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "/content\n",
-            "/content/datascience_nexus/TASK-1\n"
+            "[Errno 2] No such file or directory: '/content/datascience_nexus/TASK-1'\n",
+            "/content\n"
           ]
         }
       ]
@@ -137,19 +144,7 @@
       "metadata": {
         "id": "mlMSYOd8Gv69"
       },
-      "execution_count": 98,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "id": "isnAkwpOXJAS"
-      },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -166,7 +161,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df=pd.read_csv(\"/content/Iris dataset -Task 1.csv\")\n",
+        "df=pd.read_csv(\"/content/datascience_nexus/Iris.csv.csv\")\n",
         "df"
       ],
       "metadata": {
@@ -175,9 +170,9 @@
           "height": 424
         },
         "id": "OIgIDFD7MNy9",
-        "outputId": "bc3eb9fb-8cf4-4b75-daa0-4ed378c87f68"
+        "outputId": "b0ee1cbc-3f7e-4c1f-aad2-ae5f0ffeae36"
       },
-      "execution_count": 117,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -213,7 +208,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-82cc9978-634b-4bab-9946-4bf8a687bd07\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-fdbd2e26-a755-4b38-88d5-1a5df58975db\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -347,7 +342,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-82cc9978-634b-4bab-9946-4bf8a687bd07')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fdbd2e26-a755-4b38-88d5-1a5df58975db')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -399,12 +394,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-82cc9978-634b-4bab-9946-4bf8a687bd07 button.colab-df-convert');\n",
+              "        document.querySelector('#df-fdbd2e26-a755-4b38-88d5-1a5df58975db button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-82cc9978-634b-4bab-9946-4bf8a687bd07');\n",
+              "        const element = document.querySelector('#df-fdbd2e26-a755-4b38-88d5-1a5df58975db');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -424,8 +419,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-d55120ca-39c3-4023-bc38-844be5ff9fbc\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d55120ca-39c3-4023-bc38-844be5ff9fbc')\"\n",
+              "<div id=\"df-0d161a66-661e-47bd-bfc2-1df1d2d9723d\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0d161a66-661e-47bd-bfc2-1df1d2d9723d')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -544,14 +539,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-d55120ca-39c3-4023-bc38-844be5ff9fbc button');\n",
+              "        document.querySelector('#df-0d161a66-661e-47bd-bfc2-1df1d2d9723d button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_4ac70988-213c-4777-b807-093b61753fca\">\n",
+              "  <div id=\"id_ac2929e9-883b-4ae1-a8a4-318d451ca3e1\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -595,7 +590,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_4ac70988-213c-4777-b807-093b61753fca button.colab-df-generate');\n",
+              "        document.querySelector('#id_ac2929e9-883b-4ae1-a8a4-318d451ca3e1 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -611,21 +606,9 @@
             ]
           },
           "metadata": {},
-          "execution_count": 117
+          "execution_count": 5
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#if the above thing doesnt work , please download the csv file from the below link and link it with collab and run this cell\n",
-        "url = https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\n"
-      ],
-      "metadata": {
-        "id": "EECSkPx8WGqt"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -661,7 +644,7 @@
         "id": "_1HD12UyOWuT",
         "outputId": "3f31d8d2-1bfa-4160-de94-8f709dc4642c"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -689,7 +672,7 @@
       "metadata": {
         "id": "m0P9p9M_Ym6c"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -700,7 +683,7 @@
       "metadata": {
         "id": "mmCuIa5BOv9P"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -731,7 +714,7 @@
         "id": "ObXx4jbePiUf",
         "outputId": "6332e5fe-6736-4b9c-f124-d189320d98b1"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1062,7 +1045,7 @@
         "id": "E_RvsoGDPr4Q",
         "outputId": "d5d259c2-d1fa-4d63-db57-087c7d2d2fc7"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1107,7 +1090,7 @@
         "id": "sQKGxapqRAHv",
         "outputId": "890a6d91-98a0-4942-95d9-f1c22913fc41"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1184,7 +1167,7 @@
         "id": "jOS08b7fUWPb",
         "outputId": "8d25bdf3-c591-4228-9f03-f61c55800651"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1301,7 +1284,7 @@
         "id": "MKdAVniaX6g3",
         "outputId": "8d471e4d-dbe7-4254-e52f-541e9228e1e8"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1359,7 +1342,7 @@
       "metadata": {
         "id": "Xw09ueQggRP5"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1379,7 +1362,7 @@
       "metadata": {
         "id": "ckZGj_8sgzUm"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1431,7 +1414,7 @@
         "id": "gzPiQWnBiVHx",
         "outputId": "aac8a00a-ccb3-4b37-8200-b68f912a3188"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1470,7 +1453,7 @@
         "id": "I324G3c_Jlz1",
         "outputId": "9ba1021c-7b15-4d88-c9be-f9c9bd90fa9c"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1515,7 +1498,7 @@
       "metadata": {
         "id": "mQZssEv3J1Hm"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1537,7 +1520,7 @@
         "id": "LBaylkEcJz6X",
         "outputId": "3e5ce010-3399-4051-8634-7856dd8dcc5f"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1606,7 +1589,7 @@
         "id": "bjpvNW7Y0k5-",
         "outputId": "0590f59d-a75c-4040-e404-54dcb50ea9be"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1645,7 +1628,7 @@
         "id": "VC3oeQES09jy",
         "outputId": "454037a2-6f4e-4547-8731-00c584645f91"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1703,7 +1686,7 @@
         "id": "AaEBlmul0_lr",
         "outputId": "390dad56-8ded-4884-8561-2cbc1ff55c6f"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
