Completed task 1 using Colab Environment.

--- a/Task_1_Iris_Classification.ipynb
+++ b/Task_1_Iris_Classification.ipynb
@@ -8,7 +8,7 @@
         "SsbbsyGseQ3I",
         "sPT5t1zA0_X3"
       ],
-      "authorship_tag": "ABX9TyMBMtUH7c0YXOg0jW3PFCfv",
+      "authorship_tag": "ABX9TyNLNfWjOeDWxto8HZMP0ndl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,57 +65,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZLf8xJQrB3wY",
-        "outputId": "a15dac51-9100-4e2a-d764-a62c7b35dafe"
+        "outputId": "3bbb2ec1-0eda-4379-c78f-1fede07f33bc"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'datascience_nexus'...\n",
-            "remote: Enumerating objects: 28, done.\u001b[K\n",
-            "remote: Counting objects: 100% (28/28), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (25/25), done.\u001b[K\n",
-            "remote: Total 28 (delta 8), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (28/28), 190.70 KiB | 4.33 MiB/s, done.\n",
-            "Resolving deltas: 100% (8/8), done.\n"
+            "fatal: destination path 'datascience_nexus' already exists and is not an empty directory.\n"
           ]
         }
       ],
       "source": [
         "!git clone https://github.com/TPYogalashmi/datascience_nexus.git"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pwd\n",
-        "%cd /content/datascience_nexus/TASK-1"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ODdzEyUZB_G6",
-        "outputId": "ca6386ab-8100-4dd1-f837-addea96e730a"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content\n",
-            "[Errno 2] No such file or directory: '/content/datascience_nexus/TASK-1'\n",
-            "/content\n"
-          ]
-        }
       ]
     },
     {
@@ -144,7 +112,7 @@
       "metadata": {
         "id": "mlMSYOd8Gv69"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -172,7 +140,7 @@
         "id": "OIgIDFD7MNy9",
         "outputId": "b0ee1cbc-3f7e-4c1f-aad2-ae5f0ffeae36"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
